tests/snapshots/test_runner__tests__compiler__typecheck__enum_7.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Food = Nut
enum Tool = Nut

let a: Tool = Nut
let f
  : | Food => Integer
  = | Nut => 123

do a.f

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_7.kk:9:4
  │
9 │ do a.f
  │    ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Food        | + Tool      |
    +---------------+-------------+
