tests/snapshots/test_runner__tests__compiler__typecheck__enum_qualified_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Food = Nut()

let x = Bomb::Nut()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_qualified_4.kk:3:9
  │
3 │ let x = Bomb::Nut()
  │         ^^^^ Unknown Namespace
  │
  = Cannot find this namespace in the current scope
