tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let as<Type> = \(x: Type): Type => x

let foo = "123".as<Type= number>()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_1.kk:3:11
  │
3 │ let foo = "123".as<Type= number>()
  │           ^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - number      | + string    |
    +---------------+-------------+
